<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:id="@+id/parent_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding">

        <ImageView
            android:id="@+id/main_cat_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/choose_tag_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/main_cat_image"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_marginTop="@dimen/average_vertical_margin"
            android:hint="@string/choose_tag_label">

            <AutoCompleteTextView
                android:id="@+id/choose_tag_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/choose_filter_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/choose_tag_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_marginTop="@dimen/average_vertical_margin"
            android:hint="@string/choose_filter_label">

            <AutoCompleteTextView
                android:id="@+id/choose_filter_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/add_text_chb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/choose_filter_input"
            android:layout_marginTop="@dimen/average_vertical_margin"
            android:checked="false"
            android:text="@string/add_text_checkbox"/>

        <!-- Add text preferences panel -->
        <LinearLayout
            android:id="@+id/add_text_options_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_text_chb"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/average_vertical_margin"
                android:hint="@string/description_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.slider.Slider
                android:id="@+id/font_size_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/average_vertical_margin"
                android:valueFrom="20"
                android:valueTo="200"
                android:value="50"
                android:stepSize="10"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/color_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_marginTop="@dimen/average_vertical_margin"
                android:hint="@string/color_label">

                <AutoCompleteTextView
                    android:id="@+id/color_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/get_cat_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_text_options_layout"
            android:layout_marginTop="@dimen/average_vertical_margin"
            android:text="@string/give_cat_bt"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>